<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovieCollection</string>
    <string name="action_settings">Settings</string>
    
    <string name="no_movies">No Movies</string>
    <string name="menuitem_add">Add</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>
    <string name="button_save_movie">Save Movie</string>
    <string name="field_title">Title (Required)</string>
    <string name="field_year">Year</string>
    <string name="field_director">Director</string>
    <string name="field_type">Type</string>
    <string name="label_title">Title:</string>
    <string name="label_year">Year:</string>
    <string name="label_director">Director:</string>
    <string name="label_type">Type</string>
    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the Movie</string>
    <string name="ok">OK</string>
    <string name="error_message">You must enter a Movie title</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>

</resources>
